Import of RWSTAUNER/DBIx-RoboQuery-0.016.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-RoboQuery
gitpan-cpan-version:      0.016
gitpan-cpan-path:         RWSTAUNER/DBIx-RoboQuery-0.016.tar.gz
gitpan-cpan-author:       RWSTAUNER
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,8 @@ copyright_holder = Randy Stauner
 copyright_year   = 2010
 
 [@Author::RWSTAUNER]
+; we don't need this synopsis compilation test since we have a real t/synopsis.t
+disable_tests = Test::Synopsis
 [%PodWeaver]
 -StopWords.include = dbh sql resultset
 [Prereqs / TestSuggests]
