--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year   = 2010
 
 [@Author::RWSTAUNER]
 ; we don't need this synopsis compilation test since we have a real t/synopsis.t
-disable_tests = Test::Synopsis
+-remove = Test::Synopsis
 [%PodWeaver]
 -StopWords.include = dbh sql resultset
 [Prereqs / TestSuggests]
