Import of RWSTAUNER/DBIx-RoboQuery-0.032.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-RoboQuery
gitpan-cpan-version:      0.032
gitpan-cpan-path:         RWSTAUNER/DBIx-RoboQuery-0.032.tar.gz
gitpan-cpan-author:       RWSTAUNER
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,12 @@ copyright_year   = 2010
 [@Author::RWSTAUNER]
 ; we don't need this synopsis compilation test since we have a real t/synopsis.t
 -remove = Test::Synopsis
+
 [%PodWeaver]
 -StopWords.include = dbh sql resultset
+
+[Prereqs]
+Sub::Chain::Group = 0.013
+
 [Prereqs / TestSuggests]
 Test::Exception = 0
